my first angularJs app.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
-<html>
+<html ng-app="myFirstApp">
   <head>
-    <title>Hello coursera</title>
+    <script type="text/javascript" src="angular.min.js">
+    </script>
+    <!-- <script type="text/javascript" src="angular.js">
+    </script> -->
+    <script type="text/javascript" src="app.js">
+    </script>
+    <title>AngularJs app</title>
   </head>
   <body>
-    <h1>Hello coursera students!</h1>
-    <h2>Like it..</h2>
+    <div ng-controller="myFirstController">
+
+    </div>
   </body>
 </html>
