--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
   <head>
     <script type="text/javascript" src="angular.min.js">
     </script>
-    <!-- <script type="text/javascript" src="angular.js">
-    </script> -->
     <script type="text/javascript" src="app.js">
     </script>
-    <title>AngularJs app</title>
+    <title>First AngularJs app</title>
   </head>
   <body>
     <div ng-controller="myFirstController">
-
     </div>
   </body>
 </html>
