--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div ng-controller="myFirstController">
+      {{sayHello()}} <br/>
+      <input type="text" ng-model="name">
+      The input value is: {{name}}
     </div>
   </body>
 </html>
